--- a/src/main/resources/static/details.html
+++ b/src/main/resources/static/details.html
@@ -55,7 +55,7 @@ desired effect
 |               | sidebar-mini                            |
 |---------------------------------------------------------|
 -->
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="skin-blue sidebar-mini">
 <div class="wrapper">
 
   <!-- Main Header -->
